Incorporating spacing fixes for resource group caret

--- a/app/styles/less/main.less
+++ b/app/styles/less/main.less
@@ -228,7 +228,6 @@ div[role=preview-wrapper] {
   float: left;
   .box-sizing(border-box);
   background: rgb(230,231,235);
-  padding: 0px 20px 10px 20px;
 }
 
 div[role=preview] {
